import { OnCompletion } from '@kaoto/camel-catalog/types';

import { mockRandomValues } from '../../../stubs';
import { CatalogKind } from '../../catalog-kind';
import { IVisualizationNodeData } from '../base-visual-entity';
import { CamelOnCompletionVisualEntity } from './camel-on-completion-visual-entity';
import { ModelValidationService } from './support/validators/model-validation.service';

describe('CamelOnCompletionVisualEntity', () => {
  beforeAll(() => {
    mockRandomValues();
  });

  describe('function Object() { [native code] }', () => {
    it('should allow to create an instance out of the object definition', () => {
      const onCompletionVisualEntity = new CamelOnCompletionVisualEntity({
        onCompletion: { id: 'a-reference', mode: 'AfterConsumer' },
      });

      expect(onCompletionVisualEntity.getId()).toBe('a-reference');
    });

    it('should allow to create an instance out of the object definition without id', () => {
      const onCompletionRaw: { onCompletion: OnCompletion } = {
        onCompletion: { id: undefined, mode: 'AfterConsumer' },
      };
      const onCompletionVisualEntity = new CamelOnCompletionVisualEntity(onCompletionRaw);

      expect(onCompletionVisualEntity.getId()).toBeDefined();
      expect(onCompletionRaw.onCompletion.id).toEqual(onCompletionVisualEntity.getId());
    });
  });

  describe('isApplicable', () => {
    it.each([
      [{ from: { id: 'from-1234', steps: [] } }, false],
      [{ onCompletion: { id: 'onCompletionId' } }, true],
      [{ onException: { id: 'onExceptionId' } }, false],
      [{ intercept: { id: 'interceptId' } }, false],
      [{ interceptFrom: { id: 'interceptFromId' } }, false],
      [{ interceptSendToEndpoint: { id: 'interceptSendToEndpointId' } }, false],
    ])('should return %s for %s', (definition, result) => {
      expect(CamelOnCompletionVisualEntity.isApplicable(definition)).toEqual(result);
    });
  });

  it('should return the id', () => {
    const onCompletionVisualEntity = new CamelOnCompletionVisualEntity({
      onCompletion: { id: 'id', mode: 'AfterConsumer' },
    });
    expect(onCompletionVisualEntity.getId()).toBe('id');
  });

  it('should set the id', () => {
    const onCompletionVisualEntity = new CamelOnCompletionVisualEntity({
      onCompletion: { id: 'id', mode: 'AfterConsumer' },
    });
    onCompletionVisualEntity.setId('new-id');
    expect(onCompletionVisualEntity.getId()).toBe('new-id');
    expect(onCompletionVisualEntity.onCompletionDef.onCompletion.id).toBe('new-id');
  });

  describe('getNodeInteraction', () => {
    it.each([
      { primaryNodeId: { name: 'route', catalogKind: CatalogKind.Entity }, path: 'route' },
      { primaryNodeId: { name: 'from', catalogKind: CatalogKind.Entity }, path: 'from' },
      { primaryNodeId: { name: 'to', catalogKind: CatalogKind.Pattern }, path: 'to' },
      { primaryNodeId: { name: 'log', catalogKind: CatalogKind.Pattern }, path: 'log' },
      { primaryNodeId: { name: 'onException', catalogKind: CatalogKind.Entity }, path: 'onException' },
      { primaryNodeId: { name: 'onCompletion', catalogKind: CatalogKind.Entity }, path: 'onCompletion' },
      { primaryNodeId: { name: 'intercept', catalogKind: CatalogKind.Entity }, path: 'intercept' },
      {
        primaryNodeId: { name: 'interceptSendToEndpoint', catalogKind: CatalogKind.Entity },
        path: 'interceptSendToEndpoint',
      },
    ])(`should return the correct interaction for the '%s' processor`, (data) => {
      const onCompletionVisualEntity = new CamelOnCompletionVisualEntity({
        onCompletion: { id: 'id', mode: 'AfterConsumer' },
      });

      const result = onCompletionVisualEntity.getNodeInteraction({
        ...data,
        isPlaceholder: false,
        isGroup: false,
        iconUrl: '',
        title: '',
        description: '',
        processorIconTooltip: '',
      } as IVisualizationNodeData);
      expect(result).toMatchSnapshot();
    });
  });

  it('should delegate the validation text to the ModelValidationService', () => {
    const validateNodeStatusSpy = vi.spyOn(ModelValidationService, 'validateNodeStatus');

    const onCompletionVisualEntity = new CamelOnCompletionVisualEntity({
      onCompletion: { id: 'id', mode: 'AfterConsumer' },
    });
    onCompletionVisualEntity.getNodeValidationText('onCompletion');

    expect(validateNodeStatusSpy).toHaveBeenCalled();
  });

  it('toVizNode should return visualization node', async () => {
    const onCompletionVisualEntity = new CamelOnCompletionVisualEntity({
      onCompletion: { id: 'id', mode: 'AfterConsumer' },
    });
    const vizNode = await onCompletionVisualEntity.toVizNode();
    await vizNode.fetchSchema();

    expect(vizNode.data.processorName).toBe(CamelOnCompletionVisualEntity.ROOT_PATH);
    expect(vizNode.data.entity).toBe(onCompletionVisualEntity);
    expect(vizNode.data.isGroup).toBeTruthy();
    expect(vizNode.data.primaryNodeId).toEqual({
      name: onCompletionVisualEntity.type,
      catalogKind: CatalogKind.Entity,
    });
  });

  it('should serialize the entity', () => {
    const onCompletionVisualEntity = new CamelOnCompletionVisualEntity({
      onCompletion: { id: undefined, mode: 'AfterConsumer' },
    });
    const result = onCompletionVisualEntity.toJSON();

    expect(result).toMatchSnapshot();
  });
});
